--- a/src/views/partials/footer.mustache
+++ b/src/views/partials/footer.mustache
@@ -1,5 +1,6 @@
 <footer class="container">
-    Feito com ❤ pela B7Web
+    Eliton de Souza Silva
+    Aprendendo typescript - node.js - express
 </footer>
 </body>
 </html>
